--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Verifies argument types.",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/**/*.js"
+    "test": "tape test/**/*.js",
+    "coverage": "istanbul cover tape tests/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,13 @@
   "homepage": "https://github.com/smockle/safe#readme",
   "devDependencies": {
     "babel-eslint": "^6.0.4",
+    "codeclimate-test-reporter": "^0.3.1",
+    "coveralls": "^2.11.9",
     "eslint": "^2.11.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.1",
     "eslint-plugin-standard": "^1.3.2",
+    "istanbul": "^0.4.3",
     "tape": "^4.5.1"
   },
   "dependencies": {}
