--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Verifies argument types.",
   "main": "index.js",
   "scripts": {
+    "docs": "jsdoc2md lib/**/*.js --template jsdoc2md/README.hbs > README.md",
     "test": "tape test/**/*.js",
     "coverage": "istanbul cover tape test/**/*.js"
   },
@@ -26,6 +27,7 @@
     "eslint-plugin-promise": "^1.3.1",
     "eslint-plugin-standard": "^1.3.2",
     "istanbul": "^0.4.3",
+    "jsdoc-to-markdown": "^1.3.6",
     "tape": "^4.5.1"
   },
   "dependencies": {}
