--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "docs": "jsdoc2md lib/**/*.js --template jsdoc2md/README.hbs --example-lang JavaScript > README.md",
-    "test": "tape test/**/*.js",
-    "coverage": "istanbul cover tape test/**/*.js"
+    "test": "tape test/**/*.js && snyk test",
+    "coverage": "istanbul cover tape test/**/*.js",
+    "snyk-protect": "snyk protect",
+    "prepublish": "npm run snyk-protect"
   },
   "repository": {
     "type": "git",
