--- a/package.json
+++ b/package.json
@@ -2,16 +2,12 @@
   "name": "@smockle/safe",
   "version": "1.0.2",
   "description": "Verifies argument types.",
-  "main": "index.js",
+  "main": "lib/safe.js",
   "scripts": {
     "docs": "jsdoc2md \"lib/**/*.js\" --template jsdoc2md/README.hbs --example-lang JavaScript > README.md",
-    "test": "npm run test:bash",
-    "test:bash": "tape \"test/**/*.js\" && snyk auth $SNYK_TOKEN && snyk test",
-    "test:cmd": "tape \"test/**/*.js\" && snyk auth %SNYK_TOKEN% && snyk test",
-    "coverage": "istanbul cover tape test/**/*.js",
-    "snyk-protect": "snyk protect",
-    "prepublish": "npm run snyk-protect",
-    "postpublish": "greenkeeper-postpublish",
+    "test": "nyc tape \"test/**/*.js\" | colortape",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "npm test",
     "precommit": "lint-staged"
   },
   "repository": {
@@ -25,7 +21,7 @@
   },
   "homepage": "https://github.com/smockle/safe#readme",
   "devDependencies": {
-    "codeclimate-test-reporter": "^0.4.0",
+    "colortape": "^0.1.2",
     "coveralls": "^2.11.9",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^10.0.0",
@@ -33,22 +29,17 @@
     "eslint-plugin-node": "^4.2.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.0",
-    "greenkeeper-postpublish": "^1.0.0",
     "husky": "^0.13.2",
-    "istanbul": "^0.4.3",
     "jsdoc-to-markdown": "^3.0.0",
     "lint-staged": "^3.4.0",
+    "nyc": "^11.0.2",
     "prettier-eslint-cli": "^4.0.0",
     "tape": "^4.5.1"
   },
-  "snyk": true,
   "lint-staged": {
     "*.js": [
       "./node_modules/.bin/prettier-eslint --write",
       "git add"
     ]
-  },
-  "dependencies": {
-    "snyk": "^1.30.2"
   }
 }
