--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "lib/safe.js",
   "scripts": {
     "debug": "node --nolazy --inspect-brk=5858 -r @std/esm test/index.mjs",
-    "docs":
-      "jsdoc2md \"lib/**/*.mjs\" --configure jsdoc.json --template jsdoc2md/README.hbs --example-lang JavaScript > README.md",
+    "docs": "jsdoc2md \"lib/**/*.mjs\" --configure jsdoc.json --template jsdoc2md/README.hbs --example-lang JavaScript > README.md",
     "test": "node -r @std/esm test/index.mjs | colortape",
-    "coverage":
-      "nyc --require @std/esm --extension .mjs --reporter=lcov node test/index.mjs | colortape",
+    "coverage": "nyc --require @std/esm --extension .mjs --reporter=lcov node test/index.mjs | colortape",
     "postcoverage": "nyc report",
     "prepublishOnly": "npm test",
     "precommit": "lint-staged"
@@ -39,11 +37,14 @@
     "jsdoc-to-markdown": "^3.0.0",
     "lint-staged": "^4.0.0",
     "nyc": "^11.0.2",
-    "prettier-eslint-cli": "^4.0.0",
+    "prettier-eslint-cli": "^4.3.0",
     "tape": "^4.5.1"
   },
   "lint-staged": {
-    "*.{js,mjs}": ["./node_modules/.bin/prettier-eslint --write", "git add"]
+    "*.{js,mjs}": [
+      "./node_modules/.bin/prettier-eslint --write",
+      "git add"
+    ]
   },
   "@std/esm": {
     "cjs": true
